Fix some typos and placement of sentences.

--- a/notebooks/10/1/Empirical_Distributions.ipynb
+++ b/notebooks/10/1/Empirical_Distributions.ipynb
@@ -360,11 +360,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we increase the number of rolls in the simulation, the area of each bar gets closer 16.67%, which is the area of each bar in the probability histogram.\n",
-    "\n",
-    "What we have observed in an instance of a general rule:\n",
+    "As we increase the number of rolls in the simulation, the area of each bar gets closer to 16.67%, which is the area of each bar in the probability histogram.\n",
     "\n",
     "### The Law of Averages ###\n",
+    "\n",
+    "What we have observed above is an instance of a general rule.\n",
     "\n",
     "If a chance experiment is repeated independently and under identical conditions, then, in the long run, the proportion of times that an event occurs gets closer and closer to the theoretical probability of the event.\n",
     "\n",
