--- a/notebooks/14/1/Properties_of_the_Mean.ipynb
+++ b/notebooks/14/1/Properties_of_the_Mean.ipynb
@@ -518,7 +518,7 @@
     }
    ],
    "source": [
-    "# HIDDEN\n",
+    "HIDDEN\n",
     "\n",
     "t2 = t2.with_column(\n",
     "        'not_symmetric', make_array(0.25, 0.5, 0, 0.25)\n",
