fix various literal $ and $ escapes

--- a/notebooks/06/2/Selecting_Rows.ipynb
+++ b/notebooks/06/2/Selecting_Rows.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "# Selecting Rows\n",
     "\n",
-    "Often, we would like to extract just those rows that correspond to entries with a particular feature. For example, we might want only the rows corresponding to the Warriors, or to players who earned more than 10 million. Or we might just want the top five earners."
+    "Often, we would like to extract just those rows that correspond to entries with a particular feature. For example, we might want only the rows corresponding to the Warriors, or to players who earned more than \\$10 million. Or we might just want the top five earners."
    ]
   },
   {
@@ -278,15 +278,15 @@
    "metadata": {},
    "source": [
     "### Rows Corresponding to a Specified Feature\n",
-    "More often, we will want to access data in a set of rows that have a certain feature, but whose indices we don't know ahead of time. For example, we might want data on all the players who made more than $10 million, but we don't want to spend time counting rows in the sorted table.\n",
+    "More often, we will want to access data in a set of rows that have a certain feature, but whose indices we don't know ahead of time. For example, we might want data on all the players who made more than \\$10 million, but we don't want to spend time counting rows in the sorted table.\n",
     "\n",
     "The method `where` does the job for us. Its output is a table with the same columns as the original but only the rows *where* the feature occurs.\n",
     "\n",
-    "The first argument of `where` is the label of the column that contains the information about whether or not a row has the feature we want. If the feature is \"made more than $10 million\", the column is `SALARY`.\n",
+    "The first argument of `where` is the label of the column that contains the information about whether or not a row has the feature we want. If the feature is \"made more than \\$10 million\", the column is `SALARY`.\n",
     "\n",
     "The second argument of `where` is a way of specifying the feature. A couple of examples will make the general method of specification easier to understand.\n",
     "\n",
-    "In the first example, we extract the data for all those who earned more than $10 million."
+    "In the first example, we extract the data for all those who earned more than \\$10 million."
    ]
   },
   {
@@ -370,7 +370,7 @@
    "source": [
     "The use of the argument `are.above(10)` ensured that each selected row had a value of `SALARY` that was greater than 10.\n",
     "\n",
-    "There are 69 rows in the new table, corresponding to the 69 players who made more than \$10 million dollars. Arranging these rows in order makes the data easier to analyze. DeMar DeRozan of the Toronto Raptors was the \"poorest\" of this group, at a salary of just over \\$10 million dollars."
+    "There are 69 rows in the new table, corresponding to the 69 players who made more than \\$10 million dollars. Arranging these rows in order makes the data easier to analyze. DeMar DeRozan of the Toronto Raptors was the \"poorest\" of this group, at a salary of just over \\$10 million dollars."
    ]
   },
   {
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Curry made just under 11.4 million dollars. That's a lot of money, but it's less than half the salary of LeBron James. You'll find that salary in the \"Top 5\" table earlier in this section, or you could find it replacing `'Stephen Curry'` by `'LeBron James'` in the line of code above.\n",
+    "Curry made just under \\$11.4 million dollars. That's a lot of money, but it's less than half the salary of LeBron James. You'll find that salary in the \"Top 5\" table earlier in this section, or you could find it replacing `'Stephen Curry'` by `'LeBron James'` in the line of code above.\n",
     "\n",
     "In the code, `are` is used again, but this time with the *predicate* `equal_to` instead of `above`. Thus for example you can get a table of all the Warriors:"
    ]
@@ -783,7 +783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the table above includes Danny Green who made 10 million, but *not* Monta Ellis who made 10.3 million. As elsewhere in Python, the range `between` includes the left end but not the right."
+    "Notice that the table above includes Danny Green who made \\$10 million, but *not* Monta Ellis who made \\$10.3 million. As elsewhere in Python, the range `between` includes the left end but not the right."
    ]
   },
   {
@@ -1039,7 +1039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can get all the players who were not Cleveland Cavaliers and had a salary of no less than 20 million:"
+    "You can get all the players who were not Cleveland Cavaliers and had a salary of no less than \\$20 million:"
    ]
   },
   {
