--- a/notebooks/08/2/Classifying_by_One_Variable.ipynb
+++ b/notebooks/08/2/Classifying_by_One_Variable.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create this new table, `group` has calculated the sum of the `Price` entries in all the rows corresponding to each distinct flavor. The prices in the three `chocolate` rows add up to $\\$16.55$ (you can assume that price is being measured in dollars). The prices in the two `strawberry` rows have a total of $\\$8.80$.\n",
+    "To create this new table, `group` has calculated the sum of the `Price` entries in all the rows corresponding to each distinct flavor. The prices in the three `chocolate` rows add up to \$16.55 (you can assume that price is being measured in dollars). The prices in the two `strawberry` rows have a total of \$8.80.\n",
     "\n",
     "The label of the newly created \"sum\" column is `Price sum`, which is created by taking the label of the column being summed, and appending the word `sum`. \n",
     "\n",
