--- a/notebooks/08/3/Cross-Classifying_by_More_than_One_Variable.ipynb
+++ b/notebooks/08/3/Cross-Classifying_by_More_than_One_Variable.ipynb
@@ -989,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At a glance, you can see that over 35% of those with Bachelor's degrees or higher had incomes of $\\$75,000$ and over, whereas fewer than 10% of the people in the other education categories had that level of income. \n",
+    "At a glance, you can see that over 35% of those with Bachelor's degrees or higher had incomes of \$75,000 and over, whereas fewer than 10% of the people in the other education categories had that level of income. \n",
     "\n",
     "The bar chart below compares the personal income distributions of adult Californians who have no high diploma with those who have completed a Bachelor's degree or higher. The difference in the distributions is striking. There is a clear positive association between educational attainment and personal income."
    ]
