--- a/notebooks/14/4/Central_Limit_Theorem.ipynb
+++ b/notebooks/14/4/Central_Limit_Theorem.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recall that the bet on red pays even money, 1 to 1. We defined the function `red_winnings` that returns the net winnings on one \\$1 bet on red. Specifically, the function takes a color as its argument and returns 1 if the color is red. For all other colors it returns -1."
+    "Recall that the bet on red pays even money, 1 to 1. We defined the function `red_winnings` that returns the net winnings on one \$1 bet on red. Specifically, the function takes a color as its argument and returns 1 if the color is red. For all other colors it returns -1."
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your net gain on one bet is one random draw from the `Winnings: Red` column. There is an 18/38 chance making \\$1, and a 20/38 chance of making -$1. This probability distribution is shown in the histogram below."
+    "Your net gain on one bet is one random draw from the `Winnings: Red` column. There is an 18/38 chance making \$1, and a 20/38 chance of making -\$1. This probability distribution is shown in the histogram below."
    ]
   },
   {
@@ -285,7 +285,7 @@
     "\n",
     "It will take a bit of math to list all the possible values of your net winnings along with all of their chances. We won't do that; instead, we will approximate the probability distribution by simulation, as we have done all along in this course. \n",
     "\n",
-    "The code below simulates your net gain if you bet \\$1 on red on 400 different spins of the roulette wheel. "
+    "The code below simulates your net gain if you bet \$1 on red on 400 different spins of the roulette wheel. "
    ]
   },
   {
@@ -348,7 +348,7 @@
    "source": [
     "That's a roughly bell shaped histogram, even though the distribution we are drawing from is nowhere near bell shaped.\n",
     "\n",
-    "**Center.** The distribution is centered near -\\$20, roughly. To see why, note that your winnings will be \\$1 on about 18/38 of the bets, and -\\$1 on the remaining 20/38. So your average winnings per dollar bet will be roughly -5.26 cents:"
+    "**Center.** The distribution is centered near -20, roughly. To see why, note that your winnings will be \$1 on about 18/38 of the bets, and -\$1 on the remaining 20/38. So your average winnings per dollar bet will be roughly -5.26 cents:"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So in 400 bets you expect that your net gain will be about -\\$21:"
+    "So in 400 bets you expect that your net gain will be about -\$21:"
    ]
   },
   {
