--- a/notebooks/14/5/Variability_of_the_Sample_Mean.ipynb
+++ b/notebooks/14/5/Variability_of_the_Sample_Mean.ipynb
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take a look at the SDs in the sample mean histograms above. In all three of them, the SD of the population of delays is about 40 minutes, because all the samples were taken from the same population.\n",
+    "Take a look at the SDs in the sample mean histograms above. In all three of them, *the SD of the population of delays* is about 40 minutes, because all the samples were taken from the same population.\n",
     "\n",
     "Now look at the SD of all 10,000 sample means, when the sample size is 100. That SD is about one-tenth of the population SD. When the sample size is 400, the SD of all the sample means is about one-twentieth of the population SD. When the sample size is 625, the SD of the sample means is about one-twentyfifth of the population SD.\n",
     "\n",
@@ -490,7 +490,7 @@
     "\\frac{\\mbox{Population SD}}{\\sqrt{\\mbox{sample size}}}\n",
     "$$\n",
     "\n",
-    "This is the standard deviation of the averages of all the possible samples that could be drawn. ***It measures roughly how far off the sample means are from the population mean.**"
+    "This is the standard deviation of the averages of all the possible samples that could be drawn. **It measures roughly how far off the sample means are from the population mean.**"
    ]
   },
   {
