--- a/notebooks/15/6/Numerical_Diagnostics.ipynb
+++ b/notebooks/15/6/Numerical_Diagnostics.ipynb
@@ -425,7 +425,7 @@
     "\\frac{\\mbox{SD of residuals}}{\\mbox{SD of }y} ~=~ \\sqrt{1-r^2}\n",
     "$$\n",
     "\n",
-    "A complentary result is that no matter what the shape of the scatter plot, the SD of the fitted values is a fraction of the SD of the observed values of $y$. The fraction is |r|.\n",
+    "A complentary result is that no matter what the shape of the scatter plot, the SD of the fitted values is a fraction of the SD of the observed values of $y$. The fraction is $|r|$.\n",
     "\n",
     "$$\n",
     "\\frac{\\mbox{SD of fitted values}}{\\mbox{SD of }y} ~=~ |r|\n",
